exports[`InboxPage matches snapshot 1`] = `
<Connect(withRouter(PageLayout))
  scrollingDisabled={false}
  title="InboxPage.ordersTitle">
  <Topbar
    history={
      Object {
        "push": [Function],
      }
    }
    location={
      Object {
        "search": "",
      }
    } />
  <div>
    <h1>
      <FormattedMessage
        id="InboxPage.title"
        values={Object {}} />
    </h1>
    <TabNav
      className={null}
      rootClassName={null}
      tabs={
        Array [
          Object {
            "linkProps": Object {
              "name": "InboxPage",
              "params": Object {
                "tab": "orders",
              },
            },
            "selected": true,
            "text": <span>
              <FormattedMessage
                    id="InboxPage.ordersTabTitle"
                    values={Object {}} />
        </span>,
          },
          Object {
            "linkProps": Object {
              "name": "InboxPage",
              "params": Object {
                "tab": "sales",
              },
            },
            "selected": false,
            "text": <span>
              <FormattedMessage
                    id="InboxPage.salesTabTitle"
                    values={Object {}} />
        </span>,
          },
        ]
      } />
  </div>
  <ul>
    <li>
      <Component
        intl={
          Object {
            "formatDate": [Function],
            "formatHTMLMessage": [Function],
            "formatMessage": [Function],
            "formatNumber": [Function],
            "formatPlural": [Function],
            "formatRelative": [Function],
            "formatTime": [Function],
            "now": [Function],
          }
        }
        tx={
          Object {
            "attributes": Object {
              "createdAt": 2017-05-01T00:00:00.000Z,
              "lastTransitionedAt": 2017-01-15T00:00:00.000Z,
              "lineItems": Array [
                Object {
                  "code": "line-item/night",
                  "lineTotal": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "quantity": "1",
                  "unitPrice": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                },
                Object {
                  "code": "line-item/provider-commission",
                  "lineTotal": Money {
                    "amount": -100,
                    "currency": "USD",
                  },
                  "unitPrice": Money {
                    "amount": -100,
                    "currency": "USD",
                  },
                },
              ],
              "payinTotal": Money {
                "amount": 1000,
                "currency": "USD",
              },
              "payoutTotal": Money {
                "amount": 900,
                "currency": "USD",
              },
              "state": "state/preauthorized",
            },
            "booking": null,
            "customer": null,
            "id": UUID {
              "uuid": "order-1",
            },
            "listing": null,
            "provider": Object {
              "attributes": Object {
                "profile": Object {
                  "firstName": "provider-user-id first name",
                  "lastName": "provider-user-id last name",
                },
              },
              "id": UUID {
                "uuid": "provider-user-id",
              },
              "type": "user",
            },
            "type": "transaction",
          }
        }
        type="order" />
    </li>
    <li>
      <Component
        intl={
          Object {
            "formatDate": [Function],
            "formatHTMLMessage": [Function],
            "formatMessage": [Function],
            "formatNumber": [Function],
            "formatPlural": [Function],
            "formatRelative": [Function],
            "formatTime": [Function],
            "now": [Function],
          }
        }
        tx={
          Object {
            "attributes": Object {
              "createdAt": 2017-05-01T00:00:00.000Z,
              "lastTransitionedAt": 2016-01-15T00:00:00.000Z,
              "lineItems": Array [
                Object {
                  "code": "line-item/night",
                  "lineTotal": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "quantity": "1",
                  "unitPrice": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                },
                Object {
                  "code": "line-item/provider-commission",
                  "lineTotal": Money {
                    "amount": -100,
                    "currency": "USD",
                  },
                  "unitPrice": Money {
                    "amount": -100,
                    "currency": "USD",
                  },
                },
              ],
              "payinTotal": Money {
                "amount": 1000,
                "currency": "USD",
              },
              "payoutTotal": Money {
                "amount": 900,
                "currency": "USD",
              },
              "state": "state/preauthorized",
            },
            "booking": null,
            "customer": null,
            "id": UUID {
              "uuid": "order-2",
            },
            "listing": null,
            "provider": Object {
              "attributes": Object {
                "profile": Object {
                  "firstName": "provider-user-id first name",
                  "lastName": "provider-user-id last name",
                },
              },
              "id": UUID {
                "uuid": "provider-user-id",
              },
              "type": "user",
            },
            "type": "transaction",
          }
        }
        type="order" />
    </li>
  </ul>
</Connect(withRouter(PageLayout))>
`;

exports[`InboxPage matches snapshot 2`] = `
<a
  className=""
  href="/order/order-1/details"
  onClick={[Function]}
  style={Object {}}
  title={null}>
  <div
    className={undefined}>
    <div
      className=""
      title="provider-user-id first name provider-user-id last name">
      <span>
        pp
      </span>
    </div>
  </div>
  <div
    className={undefined} />
  <div
    className={undefined}>
    <div
      className="">
      provider-user-id first name provider-user-id last name
    </div>
    <div
      className=""
      title="2017-01-15 00:00">
      2017-01-15
    </div>
  </div>
  <div
    className="">
    InboxPage.stateRequested
  </div>
</a>
`;

exports[`InboxPage matches snapshot 3`] = `
<Connect(withRouter(PageLayout))
  scrollingDisabled={false}
  title="InboxPage.salesTitle">
  <Topbar
    history={
      Object {
        "push": [Function],
      }
    }
    location={
      Object {
        "search": "",
      }
    } />
  <div>
    <h1>
      <FormattedMessage
        id="InboxPage.title"
        values={Object {}} />
    </h1>
    <TabNav
      className={null}
      rootClassName={null}
      tabs={
        Array [
          Object {
            "linkProps": Object {
              "name": "InboxPage",
              "params": Object {
                "tab": "orders",
              },
            },
            "selected": false,
            "text": <span>
              <FormattedMessage
                    id="InboxPage.ordersTabTitle"
                    values={Object {}} />
        </span>,
          },
          Object {
            "linkProps": Object {
              "name": "InboxPage",
              "params": Object {
                "tab": "sales",
              },
            },
            "selected": true,
            "text": <span>
              <FormattedMessage
                    id="InboxPage.salesTabTitle"
                    values={Object {}} />
        </span>,
          },
        ]
      } />
  </div>
  <ul>
    <li>
      <Component
        intl={
          Object {
            "formatDate": [Function],
            "formatHTMLMessage": [Function],
            "formatMessage": [Function],
            "formatNumber": [Function],
            "formatPlural": [Function],
            "formatRelative": [Function],
            "formatTime": [Function],
            "now": [Function],
          }
        }
        tx={
          Object {
            "attributes": Object {
              "createdAt": 2017-05-01T00:00:00.000Z,
              "lastTransitionedAt": 2017-01-15T00:00:00.000Z,
              "lineItems": Array [
                Object {
                  "code": "line-item/night",
                  "lineTotal": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "quantity": "1",
                  "unitPrice": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                },
                Object {
                  "code": "line-item/provider-commission",
                  "lineTotal": Money {
                    "amount": -100,
                    "currency": "USD",
                  },
                  "unitPrice": Money {
                    "amount": -100,
                    "currency": "USD",
                  },
                },
              ],
              "payinTotal": Money {
                "amount": 1000,
                "currency": "USD",
              },
              "payoutTotal": Money {
                "amount": 900,
                "currency": "USD",
              },
              "state": "state/preauthorized",
            },
            "booking": null,
            "customer": Object {
              "attributes": Object {
                "profile": Object {
                  "firstName": "customer-user-id first name",
                  "lastName": "customer-user-id last name",
                },
              },
              "id": UUID {
                "uuid": "customer-user-id",
              },
              "type": "user",
            },
            "id": UUID {
              "uuid": "sale-1",
            },
            "listing": null,
            "provider": null,
            "type": "transaction",
          }
        }
        type="sale" />
    </li>
    <li>
      <Component
        intl={
          Object {
            "formatDate": [Function],
            "formatHTMLMessage": [Function],
            "formatMessage": [Function],
            "formatNumber": [Function],
            "formatPlural": [Function],
            "formatRelative": [Function],
            "formatTime": [Function],
            "now": [Function],
          }
        }
        tx={
          Object {
            "attributes": Object {
              "createdAt": 2017-05-01T00:00:00.000Z,
              "lastTransitionedAt": 2016-01-15T00:00:00.000Z,
              "lineItems": Array [
                Object {
                  "code": "line-item/night",
                  "lineTotal": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "quantity": "1",
                  "unitPrice": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                },
                Object {
                  "code": "line-item/provider-commission",
                  "lineTotal": Money {
                    "amount": -100,
                    "currency": "USD",
                  },
                  "unitPrice": Money {
                    "amount": -100,
                    "currency": "USD",
                  },
                },
              ],
              "payinTotal": Money {
                "amount": 1000,
                "currency": "USD",
              },
              "payoutTotal": Money {
                "amount": 900,
                "currency": "USD",
              },
              "state": "state/preauthorized",
            },
            "booking": null,
            "customer": Object {
              "attributes": Object {
                "profile": Object {
                  "firstName": "customer-user-id first name",
                  "lastName": "customer-user-id last name",
                },
              },
              "id": UUID {
                "uuid": "customer-user-id",
              },
              "type": "user",
            },
            "id": UUID {
              "uuid": "sale-2",
            },
            "listing": null,
            "provider": null,
            "type": "transaction",
          }
        }
        type="sale" />
    </li>
  </ul>
</Connect(withRouter(PageLayout))>
`;

exports[`InboxPage matches snapshot 4`] = `
<a
  className=""
  href="/sale/sale-1/details"
  onClick={[Function]}
  style={Object {}}
  title={null}>
  <div
    className={undefined}>
    <div
      className=""
      title="customer-user-id first name customer-user-id last name">
      <span>
        cc
      </span>
    </div>
  </div>
  <div
    className={undefined}>
    <div
      className={undefined} />
  </div>
  <div
    className={undefined}>
    <div
      className="">
      customer-user-id first name customer-user-id last name
    </div>
    <div
      className=""
      title="2017-01-15 00:00">
      2017-01-15
    </div>
  </div>
  <div
    className="">
    InboxPage.statePending
  </div>
</a>
`;
